@@ -44,7 +44,8 @@ $OSdir = $R::Vars::OSTYPE;
 ## </NOTE>
 
 my @knownoptions = ("debug|d", "type|t:s", "h|help", "v|version",
-		    "o|output:s", "os|OS=s" => \$OSdir, "encoding=s");
+		    "o|output:s", "os|OS=s" => \$OSdir, "encoding=s",
+		    "package=s", "version=s");
 GetOptions (@knownoptions) || &usage();
 &R_version($name, $version) if $opt_v;
 &usage() if $opt_h;
@@ -62,6 +63,10 @@ if(defined $opt_o) {
 $out = 0 if $out eq "-";
 my $enc = "unknown";
 $enc = $opt_encoding if $opt_encoding;
+my $pkg = "unknown";
+$pkg = $opt_package if $opt_package;
+my $ver = "";
+$ver = $opt_version if $opt_version;
 
 my %types_and_exts = ("txt", "",
 		      "html", ".html",
@@ -75,7 +80,7 @@ foreach my $type (keys(%types_and_exts)) {
 	if(defined $opt_o && length($opt_o) == 0) {
 	    $out .= $types_and_exts{$type};
 	}
-	Rdconv($ARGV[0], $opt_type, $opt_debug, $out, "unknown", "", $enc);
+	Rdconv($ARGV[0], $opt_type, $opt_debug, $out, $pkg, $ver, $enc);
 	$opt_type_ok = 1;
 	last;
     }
@@ -99,6 +104,8 @@ Options:
   -d, --debug		turn on debugging (increase verbosity)
   -t, --type=TYPE	convert to format TYPE
   --encoding=enc        use 'enc' as the default encoding
+  --package=pkg         use 'pkg' as the package name
+  --version=version     use 'version' as the package version
   -o, --output=OUT	use 'OUT' as the output file
       --os=NAME		use OS subdir 'NAME' (unix or windows)
       --OS=NAME		the same as '--os'
